@@ -1,3 +1,8 @@
+2006-11-20  Jean-Pierre M.  <jeanpierre@gmail.com>
+
+	* sample/iTunes_artwork.rb:
+	Use the artwork format as the temporary file extension.
+
 2006-11-20  Laurent Sansonetti  <lsansonetti@apple.com>
 
 	* README:
